# midimonster

./: CMakeLists.txt  midimonster.c  midimonster.h
core/: config.c  core.c  plugin.c  routing.c
